--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-  <meta name="theme-color" content="#7f7fd5"/>
+  <meta name="theme-color" content="#6a11cb"/>
   <title>להב סטודיו — צילום מגנטים לאירועים</title>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css"/>
@@ -84,19 +84,25 @@
     <section id="gallery" class="section">
       <div class="container">
         <h2>גלריה</h2>
+        <div class="cat-nav">
+          <button class="chip active" data-cat="all">הכול</button>
+          <button class="chip" data-cat="wedding">חתונות</button>
+          <button class="chip" data-cat="bm">בר/בת מצווה</button>
+          <button class="chip" data-cat="corporate">אירועי חברה</button>
+        </div>
         <div class="gallery-grid">
-          <button class="g-item" data-src="assets/gallery_01.svg" aria-label="פתח תמונה 1"><img loading="lazy" src="assets/gallery_01.svg" alt="תמונת גלריה 1"/></button>
-<button class="g-item" data-src="assets/gallery_02.svg" aria-label="פתח תמונה 2"><img loading="lazy" src="assets/gallery_02.svg" alt="תמונת גלריה 2"/></button>
-<button class="g-item" data-src="assets/gallery_03.svg" aria-label="פתח תמונה 3"><img loading="lazy" src="assets/gallery_03.svg" alt="תמונת גלריה 3"/></button>
-<button class="g-item" data-src="assets/gallery_04.svg" aria-label="פתח תמונה 4"><img loading="lazy" src="assets/gallery_04.svg" alt="תמונת גלריה 4"/></button>
-<button class="g-item" data-src="assets/gallery_05.svg" aria-label="פתח תמונה 5"><img loading="lazy" src="assets/gallery_05.svg" alt="תמונת גלריה 5"/></button>
-<button class="g-item" data-src="assets/gallery_06.svg" aria-label="פתח תמונה 6"><img loading="lazy" src="assets/gallery_06.svg" alt="תמונת גלריה 6"/></button>
-<button class="g-item" data-src="assets/gallery_07.svg" aria-label="פתח תמונה 7"><img loading="lazy" src="assets/gallery_07.svg" alt="תמונת גלריה 7"/></button>
-<button class="g-item" data-src="assets/gallery_08.svg" aria-label="פתח תמונה 8"><img loading="lazy" src="assets/gallery_08.svg" alt="תמונת גלריה 8"/></button>
-<button class="g-item" data-src="assets/gallery_09.svg" aria-label="פתח תמונה 9"><img loading="lazy" src="assets/gallery_09.svg" alt="תמונת גלריה 9"/></button>
-<button class="g-item" data-src="assets/gallery_10.svg" aria-label="פתח תמונה 10"><img loading="lazy" src="assets/gallery_10.svg" alt="תמונת גלריה 10"/></button>
-<button class="g-item" data-src="assets/gallery_11.svg" aria-label="פתח תמונה 11"><img loading="lazy" src="assets/gallery_11.svg" alt="תמונת גלריה 11"/></button>
-<button class="g-item" data-src="assets/gallery_12.svg" aria-label="פתח תמונה 12"><img loading="lazy" src="assets/gallery_12.svg" alt="תמונת גלריה 12"/></button>
+          <button class="g-item" data-cat="wedding"   data-src="assets/gallery_01.svg"><img src="assets/gallery_01.svg" alt="חתונה 1"></button>
+          <button class="g-item" data-cat="bm"        data-src="assets/gallery_02.svg"><img src="assets/gallery_02.svg" alt="בר/בת מצווה 1"></button>
+          <button class="g-item" data-cat="corporate" data-src="assets/gallery_03.svg"><img src="assets/gallery_03.svg" alt="אירוע חברה 1"></button>
+          <button class="g-item" data-cat="wedding"   data-src="assets/gallery_04.svg"><img src="assets/gallery_04.svg" alt="חתונה 2"></button>
+          <button class="g-item" data-cat="bm"        data-src="assets/gallery_05.svg"><img src="assets/gallery_05.svg" alt="בר/בת מצווה 2"></button>
+          <button class="g-item" data-cat="corporate" data-src="assets/gallery_06.svg"><img src="assets/gallery_06.svg" alt="אירוע חברה 2"></button>
+          <button class="g-item" data-cat="wedding"   data-src="assets/gallery_07.svg"><img src="assets/gallery_07.svg" alt="חתונה 3"></button>
+          <button class="g-item" data-cat="bm"        data-src="assets/gallery_08.svg"><img src="assets/gallery_08.svg" alt="בר/בת מצווה 3"></button>
+          <button class="g-item" data-cat="corporate" data-src="assets/gallery_09.svg"><img src="assets/gallery_09.svg" alt="אירוע חברה 3"></button>
+          <button class="g-item" data-cat="wedding"   data-src="assets/gallery_10.svg"><img src="assets/gallery_10.svg" alt="חתונה 4"></button>
+          <button class="g-item" data-cat="bm"        data-src="assets/gallery_11.svg"><img src="assets/gallery_11.svg" alt="בר/בת מצווה 4"></button>
+          <button class="g-item" data-cat="corporate" data-src="assets/gallery_12.svg"><img src="assets/gallery_12.svg" alt="אירוע חברה 4"></button>
         </div>
       </div>
     </section>
@@ -155,7 +161,7 @@
     </div>
   </footer>
 
-  <a class="whatsapp-fab" href="https://wa.me/972000000000" target="_blank" rel="noopener">ווצאפ</a>
+  <a class="whatsapp-fab" href="https://wa.me/972000000000" target="_blank" rel="noopener">WhatsApp</a>
 
   <script src="script.js" defer></script>
 </body>
