--- a/index.html
+++ b/index.html
@@ -84,25 +84,29 @@
     <section id="gallery" class="section">
       <div class="container">
         <h2>גלריה</h2>
-        <div class="cat-nav">
-          <button class="chip active" data-cat="all">הכול</button>
-          <button class="chip" data-cat="wedding">חתונות</button>
-          <button class="chip" data-cat="bm">בר/בת מצווה</button>
-          <button class="chip" data-cat="corporate">אירועי חברה</button>
+
+        <div class="cat-wrap">
+          <div class="cat-inner">
+            <button class="chip active" data-cat="all">הכול</button>
+            <button class="chip" data-cat="wedding">חתונות</button>
+            <button class="chip" data-cat="bm">בר/בת מצווה</button>
+            <button class="chip" data-cat="corporate">אירועי חברה</button>
+          </div>
         </div>
+
         <div class="gallery-grid">
-          <button class="g-item" data-cat="wedding"   data-src="assets/gallery_01.svg"><img src="assets/gallery_01.svg" alt="חתונה 1"></button>
-          <button class="g-item" data-cat="bm"        data-src="assets/gallery_02.svg"><img src="assets/gallery_02.svg" alt="בר/בת מצווה 1"></button>
-          <button class="g-item" data-cat="corporate" data-src="assets/gallery_03.svg"><img src="assets/gallery_03.svg" alt="אירוע חברה 1"></button>
-          <button class="g-item" data-cat="wedding"   data-src="assets/gallery_04.svg"><img src="assets/gallery_04.svg" alt="חתונה 2"></button>
-          <button class="g-item" data-cat="bm"        data-src="assets/gallery_05.svg"><img src="assets/gallery_05.svg" alt="בר/בת מצווה 2"></button>
-          <button class="g-item" data-cat="corporate" data-src="assets/gallery_06.svg"><img src="assets/gallery_06.svg" alt="אירוע חברה 2"></button>
-          <button class="g-item" data-cat="wedding"   data-src="assets/gallery_07.svg"><img src="assets/gallery_07.svg" alt="חתונה 3"></button>
-          <button class="g-item" data-cat="bm"        data-src="assets/gallery_08.svg"><img src="assets/gallery_08.svg" alt="בר/בת מצווה 3"></button>
-          <button class="g-item" data-cat="corporate" data-src="assets/gallery_09.svg"><img src="assets/gallery_09.svg" alt="אירוע חברה 3"></button>
-          <button class="g-item" data-cat="wedding"   data-src="assets/gallery_10.svg"><img src="assets/gallery_10.svg" alt="חתונה 4"></button>
-          <button class="g-item" data-cat="bm"        data-src="assets/gallery_11.svg"><img src="assets/gallery_11.svg" alt="בר/בת מצווה 4"></button>
-          <button class="g-item" data-cat="corporate" data-src="assets/gallery_12.svg"><img src="assets/gallery_12.svg" alt="אירוע חברה 4"></button>
+          <button class="g-item" data-cat="wedding" data-src="assets/gallery_01.svg"><img src="assets/gallery_01.svg" alt="חתונה 1"></button>
+<button class="g-item" data-cat="bm" data-src="assets/gallery_02.svg"><img src="assets/gallery_02.svg" alt="בר/בת מצווה 1"></button>
+<button class="g-item" data-cat="corporate" data-src="assets/gallery_03.svg"><img src="assets/gallery_03.svg" alt="אירוע חברה 1"></button>
+<button class="g-item" data-cat="wedding" data-src="assets/gallery_04.svg"><img src="assets/gallery_04.svg" alt="חתונה 2"></button>
+<button class="g-item" data-cat="bm" data-src="assets/gallery_05.svg"><img src="assets/gallery_05.svg" alt="בר/בת מצווה 2"></button>
+<button class="g-item" data-cat="corporate" data-src="assets/gallery_06.svg"><img src="assets/gallery_06.svg" alt="אירוע חברה 2"></button>
+<button class="g-item" data-cat="wedding" data-src="assets/gallery_07.svg"><img src="assets/gallery_07.svg" alt="חתונה 3"></button>
+<button class="g-item" data-cat="bm" data-src="assets/gallery_08.svg"><img src="assets/gallery_08.svg" alt="בר/בת מצווה 3"></button>
+<button class="g-item" data-cat="corporate" data-src="assets/gallery_09.svg"><img src="assets/gallery_09.svg" alt="אירוע חברה 3"></button>
+<button class="g-item" data-cat="wedding" data-src="assets/gallery_10.svg"><img src="assets/gallery_10.svg" alt="חתונה 4"></button>
+<button class="g-item" data-cat="bm" data-src="assets/gallery_11.svg"><img src="assets/gallery_11.svg" alt="בר/בת מצווה 4"></button>
+<button class="g-item" data-cat="corporate" data-src="assets/gallery_12.svg"><img src="assets/gallery_12.svg" alt="אירוע חברה 4"></button>
         </div>
       </div>
     </section>
