--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <header class="site-header">
     <div class="container">
       <div class="header-bar">
-        <a class="brand" href="#home" aria-label="Logo">
-          <img src="assets/logo.svg" alt="להב סטודיו לוגו" width="140" height="40"/>
+        <a class="brand logo" href="#home" aria-label="Logo">
+          <img src="assets/logo.svg" alt="לוגו להב סטודיו" width="140" height="40"/>
         </a>
         <nav id="nav" class="main-nav" aria-label="ראשי">
           <a href="#home">בית</a>
@@ -94,18 +94,18 @@
           </div>
         </div>
         <div class="gallery-grid">
-          <button class="g-item" data-cat="wedding"   data-src="assets/gallery_01.svg"><img src="assets/gallery_01.svg" alt="חתונה 1"></button>
-          <button class="g-item" data-cat="bm"        data-src="assets/gallery_02.svg"><img src="assets/gallery_02.svg" alt="בר/בת מצווה 1"></button>
-          <button class="g-item" data-cat="corporate" data-src="assets/gallery_03.svg"><img src="assets/gallery_03.svg" alt="אירוע חברה 1"></button>
-          <button class="g-item" data-cat="wedding"   data-src="assets/gallery_04.svg"><img src="assets/gallery_04.svg" alt="חתונה 2"></button>
-          <button class="g-item" data-cat="bm"        data-src="assets/gallery_05.svg"><img src="assets/gallery_05.svg" alt="בר/בת מצווה 2"></button>
-          <button class="g-item" data-cat="corporate" data-src="assets/gallery_06.svg"><img src="assets/gallery_06.svg" alt="אירוע חברה 2"></button>
-          <button class="g-item" data-cat="wedding"   data-src="assets/gallery_07.svg"><img src="assets/gallery_07.svg" alt="חתונה 3"></button>
-          <button class="g-item" data-cat="bm"        data-src="assets/gallery_08.svg"><img src="assets/gallery_08.svg" alt="בר/בת מצווה 3"></button>
-          <button class="g-item" data-cat="corporate" data-src="assets/gallery_09.svg"><img src="assets/gallery_09.svg" alt="אירוע חברה 3"></button>
-          <button class="g-item" data-cat="wedding"   data-src="assets/gallery_10.svg"><img src="assets/gallery_10.svg" alt="חתונה 4"></button>
-          <button class="g-item" data-cat="bm"        data-src="assets/gallery_11.svg"><img src="assets/gallery_11.svg" alt="בר/בת מצווה 4"></button>
-          <button class="g-item" data-cat="corporate" data-src="assets/gallery_12.svg"><img src="assets/gallery_12.svg" alt="אירוע חברה 4"></button>
+          <button class="g-item" data-cat="wedding"   data-src="assets/gallery_01.svg"><img src="assets/gallery_01.svg" alt="גלריה 1"></button>
+<button class="g-item" data-cat="bm"        data-src="assets/gallery_02.svg"><img src="assets/gallery_02.svg" alt="גלריה 2"></button>
+<button class="g-item" data-cat="corporate" data-src="assets/gallery_03.svg"><img src="assets/gallery_03.svg" alt="גלריה 3"></button>
+<button class="g-item" data-cat="wedding"   data-src="assets/gallery_04.svg"><img src="assets/gallery_04.svg" alt="גלריה 4"></button>
+<button class="g-item" data-cat="bm"        data-src="assets/gallery_05.svg"><img src="assets/gallery_05.svg" alt="גלריה 5"></button>
+<button class="g-item" data-cat="corporate" data-src="assets/gallery_06.svg"><img src="assets/gallery_06.svg" alt="גלריה 6"></button>
+<button class="g-item" data-cat="wedding"   data-src="assets/gallery_07.svg"><img src="assets/gallery_07.svg" alt="גלריה 7"></button>
+<button class="g-item" data-cat="bm"        data-src="assets/gallery_08.svg"><img src="assets/gallery_08.svg" alt="גלריה 8"></button>
+<button class="g-item" data-cat="corporate" data-src="assets/gallery_09.svg"><img src="assets/gallery_09.svg" alt="גלריה 9"></button>
+<button class="g-item" data-cat="wedding"   data-src="assets/gallery_10.svg"><img src="assets/gallery_10.svg" alt="גלריה 10"></button>
+<button class="g-item" data-cat="bm"        data-src="assets/gallery_11.svg"><img src="assets/gallery_11.svg" alt="גלריה 11"></button>
+<button class="g-item" data-cat="corporate" data-src="assets/gallery_12.svg"><img src="assets/gallery_12.svg" alt="גלריה 12"></button>
         </div>
       </div>
     </section>
