--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <a class="brand logo" href="#home" aria-label="Logo">
           <img src="assets/logo.svg" alt="לוגו להב סטודיו" width="140" height="40"/>
         </a>
+        <button class="hamburger" aria-label="פתח תפריט" aria-expanded="false" aria-controls="nav">
+          <span></span><span></span><span></span>
+        </button>
         <nav id="nav" class="main-nav" aria-label="ראשי">
           <a href="#home">בית</a>
           <a href="#services">שירותים</a>
