--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-  <meta name="theme-color" content="#3a00ff"/>
+  <meta name="theme-color" content="#3814ff"/>
   <title>להב סטודיו — צילום מגנטים לאירועים</title>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css"/>
@@ -28,8 +28,7 @@
           <a href="#contact" class="btn small">דברו איתי</a>
         </nav>
       </div>
-      <!-- Mobile overlay menu -->
-      <div class="mobile-menu" role="dialog" aria-label="תפריט">
+      <div class="mobile-menu" role="dialog" aria-label="תפריט" hidden>
         <div class="row">
           <a href="#home">בית</a>
           <a href="#services">שירותים</a>
