--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <header class="site-header">
     <div class="container">
       <div class="header-bar">
-        <a class="brand logo" href="#home" aria-label="Logo">
-          <img src="assets/logo.svg" alt="לוגו להב סטודיו" width="140" height="40"/>
+        <a class="logo" href="#home" aria-label="Logo">
+          <img src="assets/logo.png" alt="להב סטודיו לוגו" width="160" height="56"/>
         </a>
         <button class="hamburger" aria-label="פתח תפריט" aria-expanded="false">
           <span></span><span></span><span></span>
@@ -164,7 +164,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <img src="assets/logo.svg" alt="" width="120" height="30" loading="lazy"/>
+      <img src="assets/logo.png" alt="" width="120" height="42" loading="lazy"/>
       <nav class="footer-nav" aria-label="ניווט בתחתית">
         <a href="#home">בית</a><a href="#services">שירותים</a><a href="#packages">חבילות</a>
         <a href="#gallery">גלריה</a><a href="#contact">קשר</a>
