--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-  <meta name="theme-color" content="#3814ff"/>
+  <meta name="theme-color" content="#3519ff"/>
   <title>להב סטודיו — צילום מגנטים לאירועים</title>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-  <canvas id="sparkles" aria-hidden="true"></canvas>
-
   <header class="site-header">
     <div class="container">
       <div class="header-bar">
         <a class="logo" href="#home" aria-label="Logo">
-          <img src="assets/logo.png" alt="להב סטודיו לוגו" width="160" height="56"/>
+          <img src="assets/logo.png" alt="לוגו להב סטודיו" width="160" height="56"/>
         </a>
         <button class="hamburger" aria-label="פתח תפריט" aria-expanded="false">
           <span></span><span></span><span></span>
@@ -154,13 +152,6 @@
       </div>
     </section>
   </main>
-
-  <div class="lightbox" aria-hidden="true" role="dialog" aria-label="תצוגת תמונה">
-    <button class="lightbox-close" aria-label="סגור">✕</button>
-    <button class="lightbox-prev" aria-label="קודם">‹</button>
-    <img class="lightbox-img" alt="תמונה מוגדלת">
-    <button class="lightbox-next" aria-label="הבא">›</button>
-  </div>
 
   <footer class="site-footer">
     <div class="container footer-inner">
