--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="header-bar">
         <a class="logo" href="#home" aria-label="Logo">
-          <img src="assets/logo.png" alt="לוגו להב סטודיו" width="160" height="56"/>
+          <img src="logo.png" alt="לוגו להב סטודיו" width="160" height="56"/>
         </a>
         <button class="hamburger" aria-label="פתח תפריט" aria-expanded="false">
           <span></span><span></span><span></span>
@@ -104,18 +104,18 @@
           </div>
         </div>
         <div class="gallery-grid">
-          <button class="g-item" data-cat="wedding"   data-src="assets/gallery_01.svg"><img src="assets/gallery_01.svg" alt="גלריה 1"></button>
-<button class="g-item" data-cat="bm"        data-src="assets/gallery_02.svg"><img src="assets/gallery_02.svg" alt="גלריה 2"></button>
-<button class="g-item" data-cat="corporate" data-src="assets/gallery_03.svg"><img src="assets/gallery_03.svg" alt="גלריה 3"></button>
-<button class="g-item" data-cat="wedding"   data-src="assets/gallery_04.svg"><img src="assets/gallery_04.svg" alt="גלריה 4"></button>
-<button class="g-item" data-cat="bm"        data-src="assets/gallery_05.svg"><img src="assets/gallery_05.svg" alt="גלריה 5"></button>
-<button class="g-item" data-cat="corporate" data-src="assets/gallery_06.svg"><img src="assets/gallery_06.svg" alt="גלריה 6"></button>
-<button class="g-item" data-cat="wedding"   data-src="assets/gallery_07.svg"><img src="assets/gallery_07.svg" alt="גלריה 7"></button>
-<button class="g-item" data-cat="bm"        data-src="assets/gallery_08.svg"><img src="assets/gallery_08.svg" alt="גלריה 8"></button>
-<button class="g-item" data-cat="corporate" data-src="assets/gallery_09.svg"><img src="assets/gallery_09.svg" alt="גלריה 9"></button>
-<button class="g-item" data-cat="wedding"   data-src="assets/gallery_10.svg"><img src="assets/gallery_10.svg" alt="גלריה 10"></button>
-<button class="g-item" data-cat="bm"        data-src="assets/gallery_11.svg"><img src="assets/gallery_11.svg" alt="גלריה 11"></button>
-<button class="g-item" data-cat="corporate" data-src="assets/gallery_12.svg"><img src="assets/gallery_12.svg" alt="גלריה 12"></button>
+          <button class="g-item" data-cat="wedding"   data-src="gallery_01.svg"><img src="gallery_01.svg" alt="גלריה 1"></button>
+<button class="g-item" data-cat="bm"        data-src="gallery_02.svg"><img src="gallery_02.svg" alt="גלריה 2"></button>
+<button class="g-item" data-cat="corporate" data-src="gallery_03.svg"><img src="gallery_03.svg" alt="גלריה 3"></button>
+<button class="g-item" data-cat="wedding"   data-src="gallery_04.svg"><img src="gallery_04.svg" alt="גלריה 4"></button>
+<button class="g-item" data-cat="bm"        data-src="gallery_05.svg"><img src="gallery_05.svg" alt="גלריה 5"></button>
+<button class="g-item" data-cat="corporate" data-src="gallery_06.svg"><img src="gallery_06.svg" alt="גלריה 6"></button>
+<button class="g-item" data-cat="wedding"   data-src="gallery_07.svg"><img src="gallery_07.svg" alt="גלריה 7"></button>
+<button class="g-item" data-cat="bm"        data-src="gallery_08.svg"><img src="gallery_08.svg" alt="גלריה 8"></button>
+<button class="g-item" data-cat="corporate" data-src="gallery_09.svg"><img src="gallery_09.svg" alt="גלריה 9"></button>
+<button class="g-item" data-cat="wedding"   data-src="gallery_10.svg"><img src="gallery_10.svg" alt="גלריה 10"></button>
+<button class="g-item" data-cat="bm"        data-src="gallery_11.svg"><img src="gallery_11.svg" alt="גלריה 11"></button>
+<button class="g-item" data-cat="corporate" data-src="gallery_12.svg"><img src="gallery_12.svg" alt="גלריה 12"></button>
         </div>
       </div>
     </section>
@@ -155,7 +155,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <img src="assets/logo.png" alt="" width="120" height="42" loading="lazy"/>
+      <img src="logo.png" alt="" width="120" height="42" loading="lazy"/>
       <nav class="footer-nav" aria-label="ניווט בתחתית">
         <a href="#home">בית</a><a href="#services">שירותים</a><a href="#packages">חבילות</a>
         <a href="#gallery">גלריה</a><a href="#contact">קשר</a>
