--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-  <meta name="theme-color" content="#3519ff"/>
+  <meta name="theme-color" content="#3b1dff"/>
   <title>להב סטודיו — צילום מגנטים לאירועים</title>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css"/>
@@ -74,10 +74,9 @@
           <article class="package">
             <header><h3>Basic</h3><div class="tag">לאירועים קטנים</div></header>
             <ul><li>שעתיים צילום</li><li>עמדת מגנטים מעוצבת</li><li>150 מגנטים</li><li>מסגרת מותאמת</li></ul>
-            <a class="btn secondary" href="#contact" data-plan="Basic">לבירור מחיר</a>
+            <a class="btn primary" href="#contact" data-plan="Basic">לבירור מחיר</a>
           </article>
-          <article class="package featured">
-            <div class="ribbon">הנמכרת ביותר</div>
+          <article class="package">
             <header><h3>Pro</h3><div class="tag">רוב האירועים</div></header>
             <ul><li>4 שעות צילום</li><li>עמדת מגנטים + צלם שטח</li><li>300 מגנטים</li><li>2 עיצובים למסגרות</li></ul>
             <a class="btn primary" href="#contact" data-plan="Pro">לבירור מחיר</a>
@@ -85,7 +84,7 @@
           <article class="package">
             <header><h3>VIP</h3><div class="tag">כיסוי מלא</div></header>
             <ul><li>עד סיום האירוע</li><li>2 צלמים + תאורה מתקדמת</li><li>500 מגנטים</li><li>גלריה דיגיטלית ממותגת</li></ul>
-            <a class="btn secondary" href="#contact" data-plan="VIP">לבירור מחיר</a>
+            <a class="btn primary" href="#contact" data-plan="VIP">לבירור מחיר</a>
           </article>
         </div>
         <p class="fine">* המחירים מותאמים לאופי האירוע והיקפו. דברו איתי להצעת מחיר קצרה והוגנת.</p>
@@ -104,18 +103,18 @@
           </div>
         </div>
         <div class="gallery-grid">
-          <button class="g-item" data-cat="wedding"   data-src="gallery_01.svg"><img src="gallery_01.svg" alt="גלריה 1"></button>
-<button class="g-item" data-cat="bm"        data-src="gallery_02.svg"><img src="gallery_02.svg" alt="גלריה 2"></button>
-<button class="g-item" data-cat="corporate" data-src="gallery_03.svg"><img src="gallery_03.svg" alt="גלריה 3"></button>
-<button class="g-item" data-cat="wedding"   data-src="gallery_04.svg"><img src="gallery_04.svg" alt="גלריה 4"></button>
-<button class="g-item" data-cat="bm"        data-src="gallery_05.svg"><img src="gallery_05.svg" alt="גלריה 5"></button>
-<button class="g-item" data-cat="corporate" data-src="gallery_06.svg"><img src="gallery_06.svg" alt="גלריה 6"></button>
-<button class="g-item" data-cat="wedding"   data-src="gallery_07.svg"><img src="gallery_07.svg" alt="גלריה 7"></button>
-<button class="g-item" data-cat="bm"        data-src="gallery_08.svg"><img src="gallery_08.svg" alt="גלריה 8"></button>
-<button class="g-item" data-cat="corporate" data-src="gallery_09.svg"><img src="gallery_09.svg" alt="גלריה 9"></button>
-<button class="g-item" data-cat="wedding"   data-src="gallery_10.svg"><img src="gallery_10.svg" alt="גלריה 10"></button>
-<button class="g-item" data-cat="bm"        data-src="gallery_11.svg"><img src="gallery_11.svg" alt="גלריה 11"></button>
-<button class="g-item" data-cat="corporate" data-src="gallery_12.svg"><img src="gallery_12.svg" alt="גלריה 12"></button>
+          <button class="g-item" data-cat="wedding"><img src="gallery_01.svg" alt="גלריה 1"></button>
+<button class="g-item" data-cat="bm"><img src="gallery_02.svg" alt="גלריה 2"></button>
+<button class="g-item" data-cat="corporate"><img src="gallery_03.svg" alt="גלריה 3"></button>
+<button class="g-item" data-cat="wedding"><img src="gallery_04.svg" alt="גלריה 4"></button>
+<button class="g-item" data-cat="bm"><img src="gallery_05.svg" alt="גלריה 5"></button>
+<button class="g-item" data-cat="corporate"><img src="gallery_06.svg" alt="גלריה 6"></button>
+<button class="g-item" data-cat="wedding"><img src="gallery_07.svg" alt="גלריה 7"></button>
+<button class="g-item" data-cat="bm"><img src="gallery_08.svg" alt="גלריה 8"></button>
+<button class="g-item" data-cat="corporate"><img src="gallery_09.svg" alt="גלריה 9"></button>
+<button class="g-item" data-cat="wedding"><img src="gallery_10.svg" alt="גלריה 10"></button>
+<button class="g-item" data-cat="bm"><img src="gallery_11.svg" alt="גלריה 11"></button>
+<button class="g-item" data-cat="corporate"><img src="gallery_12.svg" alt="גלריה 12"></button>
         </div>
       </div>
     </section>
