--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
           </div>
         </div>
         <div class="gallery-grid">
-          <button class="g-item" data-cat="wedding"><img src="gallery_01.svg" alt="גלריה 1"></button>
-<button class="g-item" data-cat="bm"><img src="gallery_02.svg" alt="גלריה 2"></button>
-<button class="g-item" data-cat="corporate"><img src="gallery_03.svg" alt="גלריה 3"></button>
-<button class="g-item" data-cat="wedding"><img src="gallery_04.svg" alt="גלריה 4"></button>
-<button class="g-item" data-cat="bm"><img src="gallery_05.svg" alt="גלריה 5"></button>
-<button class="g-item" data-cat="corporate"><img src="gallery_06.svg" alt="גלריה 6"></button>
+          <button class="g-item" data-cat="wedding"><img src="gallery_01.png" alt="גלריה 1"></button>
+<button class="g-item" data-cat="bm"><img src="gallery_02.png" alt="גלריה 2"></button>
+<button class="g-item" data-cat="corporate"><img src="gallery_03.png" alt="גלריה 3"></button>
+<button class="g-item" data-cat="wedding"><img src="gallery_04.png" alt="גלריה 4"></button>
+<button class="g-item" data-cat="bm"><img src="gallery_05.png" alt="גלריה 5"></button>
+<button class="g-item" data-cat="corporate"><img src="gallery_06.png" alt="גלריה 6"></button>
 <button class="g-item" data-cat="wedding"><img src="gallery_07.svg" alt="גלריה 7"></button>
 <button class="g-item" data-cat="bm"><img src="gallery_08.svg" alt="גלריה 8"></button>
 <button class="g-item" data-cat="corporate"><img src="gallery_09.svg" alt="גלריה 9"></button>
