--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
           </div>
         </div>
         <div class="gallery-grid">
-          <button class="g-item" data-cat="wedding"><img src="gallery_01.PNG" alt="גלריה 1"></button>
-<button class="g-item" data-cat="bm"><img src="gallery_02.PNG" alt="גלריה 2"></button>
-<button class="g-item" data-cat="corporate"><img src="gallery_03.PNG" alt="גלריה 3"></button>
-<button class="g-item" data-cat="wedding"><img src="gallery_04.PNG" alt="גלריה 4"></button>
-<button class="g-item" data-cat="bm"><img src="gallery_05.PNG" alt="גלריה 5"></button>
-<button class="g-item" data-cat="corporate"><img src="gallery_06.PNG" alt="גלריה 6"></button>
+          <button class="g-item" data-cat="wedding"><img src="gallery_01.svg" alt="גלריה 1"></button>
+<button class="g-item" data-cat="bm"><img src="gallery_02.svg" alt="גלריה 2"></button>
+<button class="g-item" data-cat="corporate"><img src="gallery_03.svg" alt="גלריה 3"></button>
+<button class="g-item" data-cat="wedding"><img src="gallery_04.svg" alt="גלריה 4"></button>
+<button class="g-item" data-cat="bm"><img src="gallery_05.svg" alt="גלריה 5"></button>
+<button class="g-item" data-cat="corporate"><img src="gallery_06.svg" alt="גלריה 6"></button>
 <button class="g-item" data-cat="wedding"><img src="gallery_07.svg" alt="גלריה 7"></button>
 <button class="g-item" data-cat="bm"><img src="gallery_08.svg" alt="גלריה 8"></button>
 <button class="g-item" data-cat="corporate"><img src="gallery_09.svg" alt="גלריה 9"></button>
@@ -122,6 +122,7 @@
     <section id="contact" class="section">
       <div class="container">
         <h2>דברו איתי</h2>
+        <!-- v5: old visual, new functionality -->
         <form class="contact-form" id="leadFormSheets" onsubmit="return false;">
           <div class="row">
             <label>שם מלא<input required name="name" placeholder="איך לקרוא לכם?"></label>
@@ -146,7 +147,7 @@
             <button type="submit" class="btn primary" id="submitBtn">שליחה</button>
             <a class="btn ghost" href="mailto:hello@example.com">או שלחו מייל</a>
           </div>
-          <p class="fine" id="formMsg"></p>
+          <p class="fine" id="formMsg">בלחיצה על שליחה אצור קשר בהקדם. ניתן גם בוואטסאפ ↓</p>
         </form>
       </div>
     </section>
