--- a/index.html
+++ b/index.html
@@ -103,18 +103,18 @@
           </div>
         </div>
         <div class="gallery-grid">
-          <button class="g-item" data-cat="wedding"><img src="gallery_01.svg" alt="גלריה 1"></button>
-<button class="g-item" data-cat="bm"><img src="gallery_02.svg" alt="גלריה 2"></button>
-<button class="g-item" data-cat="corporate"><img src="gallery_03.svg" alt="גלריה 3"></button>
-<button class="g-item" data-cat="wedding"><img src="gallery_04.svg" alt="גלריה 4"></button>
-<button class="g-item" data-cat="bm"><img src="gallery_05.svg" alt="גלריה 5"></button>
-<button class="g-item" data-cat="corporate"><img src="gallery_06.svg" alt="גלריה 6"></button>
-<button class="g-item" data-cat="wedding"><img src="gallery_07.svg" alt="גלריה 7"></button>
-<button class="g-item" data-cat="bm"><img src="gallery_08.svg" alt="גלריה 8"></button>
-<button class="g-item" data-cat="corporate"><img src="gallery_09.svg" alt="גלריה 9"></button>
-<button class="g-item" data-cat="wedding"><img src="gallery_10.svg" alt="גלריה 10"></button>
-<button class="g-item" data-cat="bm"><img src="gallery_11.svg" alt="גלריה 11"></button>
-<button class="g-item" data-cat="corporate"><img src="gallery_12.svg" alt="גלריה 12"></button>
+          <button class="g-item" data-cat="wedding"><img src="gallery_01.PNG" alt="גלריה 1"></button>
+<button class="g-item" data-cat="bm"><img src="gallery_02.PNG" alt="גלריה 2"></button>
+<button class="g-item" data-cat="corporate"><img src="gallery_03.PNG" alt="גלריה 3"></button>
+<button class="g-item" data-cat="wedding"><img src="gallery_04.PNG" alt="גלריה 4"></button>
+<button class="g-item" data-cat="bm"><img src="gallery_05.PNG" alt="גלריה 5"></button>
+<button class="g-item" data-cat="corporate"><img src="gallery_06.PNG" alt="גלריה 6"></button>
+<button class="g-item" data-cat="wedding"><img src="gallery_07.PNG" alt="גלריה 7"></button>
+<button class="g-item" data-cat="bm"><img src="gallery_08.PNG" alt="גלריה 8"></button>
+<button class="g-item" data-cat="corporate"><img src="gallery_09.PNG" alt="גלריה 9"></button>
+<button class="g-item" data-cat="wedding"><img src="gallery_10.PNG" alt="גלריה 10"></button>
+<button class="g-item" data-cat="bm"><img src="gallery_11.PNG" alt="גלריה 11"></button>
+<button class="g-item" data-cat="corporate"><img src="gallery_12.PNG" alt="גלריה 12"></button>
         </div>
       </div>
     </section>
