--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <section id="gallery" class="section">
       <div class="container">
         <h2>גלריה</h2>
-        <div class="cat-wrap">
+        <div class="cat-wrap" style="position:static;top:auto;">
           <div class="cat-inner">
             <button class="chip active" data-cat="all">הכול</button>
             <button class="chip" data-cat="wedding">חתונות</button>
