--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
   <meta name="theme-color" content="#3b1dff"/>
   <title>להב סטודיו — צילום מגנטים לאירועים</title>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css?v=520"/>
+  <link rel="stylesheet" href="styles.css?v=522"/>
 </head>
 <body>
   <header class="site-header">
     <div class="container">
       <div class="header-bar">
         <nav class="main-nav" aria-label="ראשי">
-          <a href="#home">בית</a>
           <a href="#services">שירותים</a>
           <a href="#packages">חבילות</a>
           <a href="#gallery">גלריה</a>
@@ -142,7 +141,7 @@
     <div class="container footer-inner">
       <img src="logo.png" alt="" width="120" height="42" loading="lazy"/>
       <nav class="footer-nav" aria-label="ניווט בתחתית">
-        <a href="#home">בית</a><a href="#services">שירותים</a><a href="#packages">חבילות</a>
+        <a href="#services">שירותים</a><a href="#packages">חבילות</a>
         <a href="#gallery">גלריה</a><a href="#contact">קשר</a>
       </nav>
       <small>© <span id="year"></span> להב סטודיו</small>
@@ -151,6 +150,6 @@
 
   <a class="whatsapp-fab" href="https://wa.me/972000000000" target="_blank" rel="noopener">WhatsApp</a>
 
-  <script src="script.js?v=520" defer defer defer></script>
+  <script src="script.js?v=522" defer defer defer></script>
 </body>
 </html>
