--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#3b1dff"/>
   <title>להב סטודיו — צילום מגנטים לאירועים</title>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css?v=522"/>
+  <link rel="stylesheet" href="styles.css?v=522s"/>
 </head>
 <body>
   <header class="site-header">
@@ -150,6 +150,6 @@
 
   <a class="whatsapp-fab" href="https://wa.me/972000000000" target="_blank" rel="noopener">WhatsApp</a>
 
-  <script src="script.js?v=522" defer defer defer></script>
+  <script src="script.js?v=522s" defer defer defer defer></script>
 </body>
 </html>
