--- a/index.html
+++ b/index.html
@@ -150,6 +150,6 @@
 
   <a class="whatsapp-fab" href="https://wa.me/972000000000" target="_blank" rel="noopener">WhatsApp</a>
 
-  <script src="script.js?v=522s" defer defer defer defer></script>
+  <script src="script.js?v=522f" defer defer defer defer></script>
 </body>
 </html>
