--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#3b1dff"/>
   <title>להב סטודיו — צילום מגנטים לאירועים</title>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css?v=522s"/>
+  <link rel="stylesheet" href="styles.css?v=522w"/>
 </head>
 <body>
   <header class="site-header">
@@ -131,7 +131,7 @@
             <button type="submit" class="btn primary" id="submitBtn">שליחה</button>
             <a class="btn ghost" href="mailto:hello@example.com">או שלחו מייל</a>
           </div>
-          <p class="fine" id="formMsg">בלחיצה על שליחה אצור קשר בהקדם. ניתן גם בוואטסאפ ↓</p>
+          <p class="fine" id="formMsg">בלחיצה על שליחה אצור קשר בהקדם. ניתן גם בWhatsApp ↓</p>
         </form>
       </div>
     </section>
@@ -148,8 +148,8 @@
     </div>
   </footer>
 
-  <a class="whatsapp-fab" href="https://wa.me/972000000000" target="_blank" rel="noopener">WhatsApp</a>
+  <a class="whatsapp-fab" href="https://wa.me/972532799664" target="_blank" rel="noopener">WhatsApp</a>
 
-  <script src="script.js?v=522f" defer defer defer defer></script>
+  <script src="script.js?v=522w" defer defer defer></script>
 </body>
 </html>
