--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="theme-color" content="#3b1dff"/>
   <title>להב סטודיו — צילום מגנטים לאירועים</title>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css?v=522w3"/>
+  <link rel="stylesheet" href="styles.css?v=522w6"/>
 </head>
 <body>
   <header class="site-header">
@@ -128,7 +128,7 @@
           </label>
           <label>הודעה<textarea name="msg" rows="4" placeholder="ספרו לי בקצרה על האירוע"></textarea></label>
           <div class="row actions">
-            <button type="submit" class="btn primary" id="submitBtn">שליחה</button>
+            <a id="waSend" class="btn primary" href="#" role="button">שליחה</a>
             <a class="btn ghost" href="mailto:hello@example.com">או שלחו מייל</a>
           </div>
           <p class="fine" id="formMsg">בלחיצה על שליחה אצור קשר בהקדם. ניתן גם בWhatsApp ↓</p>
@@ -150,6 +150,6 @@
 
   <a class="whatsapp-fab" href="https://wa.me/972532799664" target="_blank" rel="noopener">WhatsApp</a>
 
-  <script src="script.js?v=522w3" defer defer defer></script>
+  <script src="script.js?v=522w6" defer defer defer></script>
 </body>
 </html>
