--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           </label>
           <label>הודעה<textarea name="msg" rows="4" placeholder="ספרו לי בקצרה על האירוע"></textarea></label>
           <div class="row actions">
-            <button type="submit" class="btn primary" id="submitBtn">שליחה</button>
+            <a id="waSend" class="btn primary" href="#" target="_blank" rel="noopener">שליחה</a>
             <a class="btn ghost" href="mailto:hello@example.com">או שלחו מייל</a>
           </div>
           <p class="fine" id="formMsg">בלחיצה על שליחה אצור קשר בהקדם. ניתן גם בוואטסאפ ↓</p>
