--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
   <meta name="theme-color" content="#3b1dff"/>
   <title>להב סטודיו — צילום מגנטים לאירועים</title>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css?v=510"/>
+  <link rel="stylesheet" href="styles.css?v=navfix2?v=510"/>
 </head>
 <body>
+<header class="site-header glass">
+  <nav class="top-nav" dir="rtl" aria-label="ראשי">
+    <a class="nav-link" href="#services">שירותים</a>
+    <a class="nav-link" href="#packages">חבילות</a>
+    <a class="nav-link" href="#gallery">גלריה</a>
+    <a class="nav-link" href="#contact">דברו איתי</a>
+  </nav>
+</header>
+
   <header class="site-header">
     <div class="container">
       <div class="header-bar">
@@ -165,6 +174,6 @@
 
   <a class="whatsapp-fab" href="https://wa.me/972000000000" target="_blank" rel="noopener">WhatsApp</a>
 
-  <script src="script.js?v=510" defer defer></script>
+  <script src="script.js?v=navfix2?v=510" defer defer></script>
 </body>
 </html>
