--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="theme-color" content="#3b1dff"/>
   <title>להב סטודיו — צילום מגנטים לאירועים</title>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css?v=navfix3?v=510"/>
+  <link rel="stylesheet" href="styles.css?v=navfix4?v=510"/>
 </head>
 <body>
-<header class="site-header glass">
+  <header class="site-header glass">
   <nav class="top-nav" dir="rtl" aria-label="ראשי">
     <a class="nav-link" href="#services">שירותים</a>
     <a class="nav-link" href="#packages">חבילות</a>
@@ -17,35 +17,6 @@
     <a class="nav-link" href="#contact">דברו איתי</a>
   </nav>
 </header>
-
-  <header class="site-header">
-    <div class="container">
-      <div class="header-bar">
-        <a class="logo" href="#home" aria-label="Logo">
-          <img src="logo.png" alt="לוגו להב סטודיו" width="160" height="56"/>
-        </a>
-        <button class="hamburger" aria-label="פתח תפריט" aria-expanded="false">
-          <span></span><span></span><span></span>
-        </button>
-        <nav class="main-nav-desktop" aria-label="ראשי">
-          <a href="#home">בית</a>
-          <a href="#services">שירותים</a>
-          <a href="#packages">חבילות</a>
-          <a href="#gallery">גלריה</a>
-          <a href="#contact" class="btn small">דברו איתי</a>
-        </nav>
-      </div>
-      <div class="mobile-menu" role="dialog" aria-label="תפריט" hidden>
-        <div class="row">
-          <a href="#home">בית</a>
-          <a href="#services">שירותים</a>
-          <a href="#packages">חבילות</a>
-          <a href="#gallery">גלריה</a>
-          <a href="#contact">דברו איתי</a>
-        </div>
-      </div>
-    </div>
-  </header>
 
   <main id="home">
     <section class="hero">
@@ -152,7 +123,7 @@
           </label>
           <label>הודעה<textarea name="msg" rows="4" placeholder="ספרו לי בקצרה על האירוע"></textarea></label>
           <div class="row actions">
-            <a id="waSend" class="btn primary" href="#" target="_blank" rel="noopener">שליחה</a>
+            <button type="submit" class="btn primary" id="submitBtn">שליחה</button>
             <a class="btn ghost" href="mailto:hello@example.com">או שלחו מייל</a>
           </div>
           <p class="fine" id="formMsg">בלחיצה על שליחה אצור קשר בהקדם. ניתן גם בוואטסאפ ↓</p>
@@ -174,6 +145,6 @@
 
   <a class="whatsapp-fab" href="https://wa.me/972000000000" target="_blank" rel="noopener">WhatsApp</a>
 
-  <script src="script.js?v=navfix3?v=510" defer defer></script>
+  <script src="script.js?v=navfix4?v=510" defer defer></script>
 </body>
 </html>
