--- a/index.html
+++ b/index.html
@@ -6,18 +6,9 @@
   <meta name="theme-color" content="#3b1dff"/>
   <title>להב סטודיו — צילום מגנטים לאירועים</title>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css?v=v53"/>
+  <link rel="stylesheet" href="styles.css?v=510"/>
 </head>
 <body>
-<header class="site-header glass">
-  <nav class="top-nav" dir="rtl" aria-label="ראשי">
-    <a class="nav-link" href="#services">שירותים</a>
-    <a class="nav-link" href="#packages">חבילות</a>
-    <a class="nav-link" href="#gallery">גלריה</a>
-    <a class="nav-link" href="#contact">דברו איתי</a>
-  </nav>
-</header>
-
   <header class="site-header">
     <div class="container">
       <div class="header-bar">
@@ -142,6 +133,9 @@
               <option>בר/בת מצווה</option><option>חתונה</option><option>ברית/ה</option><option>אירוע חברה</option><option>אחר</option>
             </select></label>
           </div>
+          <div class="row">
+            <label>מספר מוזמנים<select name="guests" id="guests" required></select></label>
+          </div>
           <label>בחירת חבילה
             <select name="package" id="packageSelect" required>
               <option value="Basic">Basic</option>
@@ -152,7 +146,7 @@
           </label>
           <label>הודעה<textarea name="msg" rows="4" placeholder="ספרו לי בקצרה על האירוע"></textarea></label>
           <div class="row actions">
-            <a id="waSend" class="btn primary" href="#" target="_blank" rel="noopener">שליחה</a>
+            <button type="submit" class="btn primary" id="submitBtn">שליחה</button>
             <a class="btn ghost" href="mailto:hello@example.com">או שלחו מייל</a>
           </div>
           <p class="fine" id="formMsg">בלחיצה על שליחה אצור קשר בהקדם. ניתן גם בוואטסאפ ↓</p>
@@ -174,6 +168,6 @@
 
   <a class="whatsapp-fab" href="https://wa.me/972000000000" target="_blank" rel="noopener">WhatsApp</a>
 
-  <script src="script.js?v=navfix2?v=510" defer defer></script>
+  <script src="script.js?v=510" defer defer></script>
 </body>
 </html>
