--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <link rel="stylesheet" href="styles.css?v=510"/>
 </head>
 <body>
+<header class="site-header glass">
+  <nav class="top-nav" dir="rtl" aria-label="ראשי">
+    <a class="nav-link" href="#services">שירותים</a>
+    <a class="nav-link" href="#packages">חבילות</a>
+    <a class="nav-link" href="#gallery">גלריה</a>
+    <a class="nav-link" href="#contact">דברו איתי</a>
+  </nav>
+</header>
   <header class="site-header">
     <div class="container">
       <div class="header-bar">
@@ -26,14 +34,7 @@
           <a href="#contact" class="btn small">דברו איתי</a>
         </nav>
       </div>
-      <div class="mobile-menu" role="dialog" aria-label="תפריט" hidden>
-        <div class="row">
-          <a href="#home">בית</a>
-          <a href="#services">שירותים</a>
-          <a href="#packages">חבילות</a>
-          <a href="#gallery">גלריה</a>
-          <a href="#contact">דברו איתי</a>
-        </div>
+      
       </div>
     </div>
   </header>
