--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
           </div>
           <div class="row">
             <label>תאריך האירוע<input name="event_date" type="date"></label>
+            <label for="guests">כמות מוזמנים
+              <select id="guests" name="guests" required>
+                <option value="" disabled selected>בחר כמות</option>
+              </select>
+            </label>
             <label>סוג האירוע<select name="event_type">
               <option>בר/בת מצווה</option><option>חתונה</option><option>ברית/ה</option><option>אירוע חברה</option><option>אחר</option>
             </select></label>
