--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
   <main id="home">
     <section class="hero">
       <div class="hero-content container">
-        <h1>כשהאירוע שלכם הופך לקטלוג ✨</h1>
-        <p class="subtitle">מגנטים בעיצוב אישי — עם סטייל, אווירה ואיכות.</p>
+        <h1>כשהאירוע שלכם נראה כמו שער מגזין ✨</h1>
+        <p class="subtitle">מגנטים בעיצוב אישי — עם סטייל, צבע ואווירה.</p>
         <div class="cta-row">
-          <a href="#contact" class="btn primary" data-plan="Pro">לבירור מחיר (Pro)</a>
+          <a href="#contact" class="btn primary" data-plan="Pro">צרו קשר</a>
           <a href="#gallery" class="btn ghost">לגלריה</a>
         </div>
         <div class="hero-badges" role="list">
@@ -82,17 +82,17 @@
         <div class="packages-grid">
           <article class="package">
             <header><h3>Basic</h3><div class="tag">לאירועים קטנים</div></header>
-            <ul><li>שעתיים צילום</li><li>עמדת מגנטים מעוצבת</li><li>150 מגנטים</li><li>מסגרת מותאמת</li></ul>
+            <ul><li>שעתיים צילום</li><li>עמדת מגנטים מעוצבת</li><li>עד 150 מגנטים</li><li>מסגרת מותאמת</li></ul>
             <a class="btn primary" href="#contact" data-plan="Basic">לבירור מחיר</a>
           </article>
           <article class="package">
             <header><h3>Pro</h3><div class="tag">רוב האירועים</div></header>
-            <ul><li>4 שעות צילום</li><li>עמדת מגנטים + צלם שטח</li><li>300 מגנטים</li><li>2 עיצובים למסגרות</li></ul>
+            <ul><li>4 שעות צילום</li><li>צלם + עוזר צלם</li><li>עד 300 מגנטים</li><li>2 עיצובים למסגרות</li></ul>
             <a class="btn primary" href="#contact" data-plan="Pro">לבירור מחיר</a>
           </article>
           <article class="package">
-            <header><h3>VIP</h3><div class="tag">כיסוי מלא</div></header>
-            <ul><li>עד סיום האירוע</li><li>2 צלמים + תאורה מתקדמת</li><li>500 מגנטים</li><li>גלריה דיגיטלית ממותגת</li></ul>
+            <header><h3>VIP</h3><div class="tag">מתאים לחתונות ואירועים גדולים</div></header>
+            <ul><li>5 שעות צילום</li><li>צלם + עוזר צלם</li><li>עד 500 מגנטים</li><li>גלריה דיגיטלית ממותגת</li></ul>
             <a class="btn primary" href="#contact" data-plan="VIP">לבירור מחיר</a>
           </article>
         </div>
